--- a/src/main/webapp/testruns.xhtml
+++ b/src/main/webapp/testruns.xhtml
@@ -7,14 +7,14 @@
 	<h:head>
 		<link rel="icon" type="image/png" href="#{resource['images/require4testing-favicon.png']}" />
 		<h:outputStylesheet library="css" name="style.css" />
-	    <title>Require4Testing Anforderungen</title>
+	    <title>Require4Testing Testläufe</title>
 	</h:head>
 	<h:body>
 		<header>
 			<ui:include src="navbar.xhtml"/>
 		</header>
 		<main>
-			<h:outputText value="Anforderungen" />
+			<h:outputText value="Testläufe" />
 		</main>
 	</h:body>
 </html>
