--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -2,13 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	<h:head>
 		<link rel="icon" type="image/png" href="#{resource['images/require4testing-favicon.png']}" />
 		<h:outputStylesheet library="css" name="style.css" />
 	    <title>Require4Testing Login</title>
 	</h:head>
 	<h:body>
+		<header>
+			<ui:include src="navbar.xhtml"/>
+		</header>
 		<main>
 		    <h:form>
 		    	<h:messages globalOnly="true" layout="list" style="color:red;"/>
