--- a/src/main/webapp/testrun-details.xhtml
+++ b/src/main/webapp/testrun-details.xhtml
@@ -42,6 +42,7 @@
 	                    <p:outputLabel for="tester" value="Tester" />
    						<p:inputText id="tester" value="#{testrunController.tempTestrun.tester.fullName}"  disabled="true" />
 	                </div>
+   	                <p:commandButton value="Tester auswählen" icon="pi pi-plus-circle" action="#{testrunController.selectTester}" rendered="#{userController.currentUser.testmanager}" />
 	                
    	                <h:panelGroup rendered="#{not empty testrunController.tempTestrun.id}">
 						<ui:include src="testcase-table.xhtml" />
